- Corrected the export to bib link name generation. - Fixed some spacing issues (CSS)

--- a/Web Interface/RRS/app/styles/import.css
+++ b/Web Interface/RRS/app/styles/import.css
@@ -1,3 +1,7 @@
+.marginBottom {
+	margin-bottom: 20px !important;
+}
+
 #file-choose
 {
 	opacity: 0;
